Update to Traccar 3.6

--- a/conf/wrapper.conf
+++ b/conf/wrapper.conf
@@ -57,9 +57,8 @@ wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperSimpleApp
 
 # Java Classpath (include wrapper.jar)  Add class path elements as
 #  needed starting from 1
-wrapper.java.classpath.2=../tracker-server.jar
 wrapper.java.classpath.1=../lib/wrapper.jar
-
+wrapper.java.classpath.2=../tracker-server.jar
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=../lib
 
@@ -67,7 +66,7 @@ wrapper.java.library.path.1=../lib
 wrapper.java.additional.auto_bits=TRUE
 
 # Java Additional Parameters
-wrapper.java.additional.1=
+wrapper.java.additional.1=-Dfile.encoding=UTF-8
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=3
@@ -76,9 +75,8 @@ wrapper.java.additional.1=
 #wrapper.java.maxmemory=64
 
 # Application parameters.  Add parameters as needed starting from 1
-wrapper.app.parameter.2=/opt/traccar/conf/traccar.cfg
 wrapper.app.parameter.1=org.traccar.Main
-
+wrapper.app.parameter.2=../conf/traccar.xml
 #********************************************************************
 # Wrapper Logging Properties
 #********************************************************************
